chore(update-deps): Fix high-contrast-scheme-dark VRT test title not displayed | mw

--- a/packages/shared/src/css/styles.css
+++ b/packages/shared/src/css/styles.css
@@ -55,8 +55,7 @@ a {
   flex-direction: column;
 }
 
-.playground[title]::before {
-  content: attr(title);
+.playground .title {
   display: block;
   width: 100%;
   font: 12px/16px 'Porsche Next';
